<resources>
    <string name="app_name">峰易智能易物</string>
    <string name="test_content">你在做什么</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="msg_camera_framework_bug">请在应用管理设置中允许V+访问你的相机。</string>
    <string name="msg_default_status">将二维码放入扫描框内，即可自行扫描</string>
    <string name="person_friend_share_wx">微信好友</string>
    <string name="person_friend_share_qq">QQ</string>
    <string name="person_friend_share_circle">朋友圈</string>
    <string name="person_friend_share_sina">新浪微博</string>
    <string name="person_friend_share_sms">短信</string>
    <string name="close">关闭</string>
    <string name="confirm">确认</string>
    <string name="cancel1">取消</string>
    <string name="jump">跳过</string>
    <string name="finished">完成</string>
    <string name="next">下一步</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="agree">同意</string>
    <string name="address">地址</string>
    <string name="commit">提交</string>
    <string name="activation">激活</string>
    <string name="num">数量</string>
    <string name="quit">退出</string>
    <string name="order">%1$s订单</string>
    <string name="amount_of_money">金额</string>
    <string name="commit_apply">提交申请</string>
    <string name="custom_net_error">网络异常！</string>
    <string name="get_permission_failed">获取必要权限失败，请到应用设置中授予权限后再使用！</string>
    <string name="toast_back_again_exit">再按一次退出</string>
    <string name="no_data_now">暂无数据</string>
    <string name="more_than_99">99+</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_category">分类</string>
    <string name="main_tab_deal">交易大厅</string>
    <string name="main_tab_special">易购专区</string>
    <string name="main_tab_person">个人中心</string>
    <string name="search_clear_history">清除历史记录</string>
    <string name="search_input_hint">请输入您要搜索的内容</string>
    <string name="login_username_text">用户名</string>
    <string name="login_input_username_hint">请输入用户编号或手机号</string>
    <string name="login_password_text">密码</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="login_register">注册</string>
    <string name="login_register_protocal">注册协议</string>
    <string name="login_protocal">登录协议</string>
    <string name="user_center_protocal">用户中心协议</string>
    <string name="protocal_agree_first">请先查看并同意协议</string>
    <string name="protocal_name">峰易用户注册服务协议</string>
    <string name="protocal_agree">我同意《峰易用户注册服务协议》</string>
    <string name="login_count_down_text">%d秒</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_logout_title">退出登录</string>
    <string name="login_logout_content">确定要退出登录</string>
    <string name="login_change_pwd_old">旧密码</string>
    <string name="login_change_pwd_old_hint">请输入旧密码</string>
    <string name="login_change_pwd_new">新密码</string>
    <string name="login_change_pwd_new_hint">请输入新密码</string>
    <string name="login_change_pwd_new_confirm">确认密码</string>
    <string name="login_change_pwd_new_confirm_hint">请再次输入新密码</string>
    <string name="login_change_pwd_different">两次输入的新密码不一致</string>
    <string name="login_change_pwd">修改登录密码</string>
    <string name="register_usernumber_text">用户编号</string>
    <string name="register_usernumber_text_add">用户编号：%1$s</string>
    <string name="register_phone_text">手机号</string>
    <string name="register_verify_code_text">验证码</string>
    <string name="register_recommend_code_text">推荐人编码</string>
    <string name="register_change_usernumber">更换用户编码</string>
    <string name="register_get_verify_code">获取验证码</string>
    <string name="register_input_phone">请输入正确的手机号</string>
    <string name="register_input_password">请输入6-12位密码字母数字组合</string>
    <string name="register_input_password_6">请输入至少6位字母数字组合密码</string>
    <string name="register_input_verify_code">请输入验证码</string>
    <string name="register_input_recommend_code">请输入推荐人编码</string>
    <string name="register_service_protocal">《峰易智能易物》服务协议</string>
    <string name="register_recommend_name">姓名</string>
    <string name="register_recommend_phone">联系方式</string>
    <string name="register_recommend_info">推荐人信息</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="forget_password_new_pwd">新密码</string>
    <string name="bindinfo_personal_info">绑定个人信息</string>
    <string name="bindinfo_phone_number">手机号码</string>
    <string name="bindinfo_identify_number">身份证号</string>
    <string name="bindinfo_identify">身份证</string>
    <string name="bindinfo_identify_correct">请填写正确的身份证号</string>
    <string name="bindinfo_identify_front">上传手持身份证正面清晰照片，复印件无效</string>
    <string name="bindinfo_identify_back">上传身份证背面清晰照片，复印件无效</string>
    <string name="setpassword_title">设置新交易密码</string>
    <string name="setpassword_text">设置积分交易密码</string>
    <string name="person_useable_integral">可用积分</string>
    <string name="person_useable_integral2">积分明细</string>
    <string name="person_good_friend">好友</string>
    <string name="person_all_order">全部订单</string>
    <string name="person_my_order">我的订单</string>
    <string name="person_click_login">点击登录</string>
    <string name="person_order_shop">购物订单</string>
    <string name="person_order_charge">充值订单</string>
    <string name="person_order_give">赠送订单</string>
    <string name="person_integral_transfer">积分互转</string>
    <string name="person_trading_order">交易订单</string>
    <string name="person_order_paying">待付款</string>
    <string name="person_order_deliving">待发货</string>
    <string name="person_order_delived">已发货</string>
    <string name="person_order_not_finish">未完成</string>
    <string name="person_order_finished">已完成</string>
    <string name="person_order_close">已关闭</string>
    <string name="person_order_cancel">取消订单</string>
    <string name="person_order_pay">付款</string>
    <string name="person_order_logistic_detail">查看物流</string>
    <string name="person_order_get_ensure">确认收货</string>
    <string name="person_order_buy_again">再次购买</string>
    <string name="person_order_refund">退款</string>
    <string name="person_order_refund_cancel">取消退款</string>
    <string name="person_order_refund_apply">申请退款</string>
    <string name="person_order_refund_detail">退款详情</string>
    <string name="person_order_refund_reason">退款原因</string>
    <string name="person_order_refund_reason2">退款原因：%1$s</string>
    <string name="person_order_refund_explain">退款说明</string>
    <string name="person_order_refund_hint">请输入退款说明</string>
    <string name="person_order_good_price">商品小计：%1$s</string>
    <string name="person_order_money_integral">%1$s元+%2$s积分</string>
    <string name="person_order_freight">运费：%1$s</string>
    <string name="person_order_goods_spec">规格：%1$s</string>
    <string name="person_order_goods_num">×%1$s</string>
    <string name="person_order_detail">查看订单</string>
    <string name="person_orderdetail_order_number">订单编号：%1$s</string>
    <string name="person_orderdetail_refund_number">退单编号：%1$s</string>
    <string name="person_orderdetail_create_time">提交时间：%1$s</string>
    <string name="person_orderdetail_pay_time">支付时间：%1$s</string>
    <string name="person_orderdetail_order_price">合计：%1$s</string>
    <string name="person_orderdetail_refund_price">退款：%1$s</string>
    <string name="person_orderdetail_refund_apply_time">申请时间：%1$s</string>
    <string name="person_orderdetail_refund_time">退款时间：%1$s</string>
    <string name="person_orderdetail_refused_time">拒绝时间：%1$s</string>
    <string name="person_orderdetail_cancel_time">取消时间：%1$s</string>
    <string name="person_personal_store">个人店铺</string>
    <string name="person_voucher_center">充值中心</string>
    <string name="person_my_message">我的消息</string>
    <string name="person_share_member">分享会员</string>
    <string name="person_consumer_service_bind">绑定消费服务中心</string>
    <string name="person_consumer_service_bind_code">绑定消费服务中心编码</string>
    <string name="person_consumer_service">消费服务中心</string>
    <string name="person_transfer_integral">转积分</string>
    <string name="person_transaction_password">积分交易密码</string>
    <string name="person_bond_exchange">债券兑换</string>
    <string name="person_lottery_inquiry">抽奖查询</string>
    <string name="person_notice">站内公告</string>
    <string name="person_pwd_set">密码设置</string>
    <string name="person_personinfo">个人中心</string>
    <string name="personinfo_avatar">个人头像</string>
    <string name="personinfo_realname">真实姓名</string>
    <string name="personinfo_nickname">昵称</string>
    <string name="personinfo_my_qrcode">我的二维码</string>
    <string name="personinfo_qrcode">二维码</string>
    <string name="personinfo_age">年龄</string>
    <string name="personinfo_logistics_company">物流公司</string>
    <string name="personinfo_receiver_address">收货地址</string>
    <string name="personinfo_permission_photo_failed">获取拍照权限失败，请到应用设置中授予权限后再使用！</string>
    <string name="personinfo_permission_album_failed">获取相册读取权限失败，请到应用设置中授予权限后再使用！</string>
    <string name="personinfo_info_avatar_camera">拍照</string>
    <string name="personinfo_info_avatar_photo">相册</string>
    <string name="personinfo_qrcode_add_friend">扫码添加好友</string>
    <string name="personinfo_all_constellation">白羊座、金牛座、双子座、巨蟹座、狮子座、处女座、天秤座、天蝎座、射手座、摩羯座、水瓶座、双鱼座、</string>
    <string name="person_address">收货地址</string>
    <string name="person_address_edit">修改地址</string>
    <string name="person_address_add">添加新地址</string>
    <string name="person_address_default">设为默认地址</string>
    <string name="person_address_detail">详细地址</string>
    <string name="person_address_position">所在地</string>
    <string name="person_address_consignee">收货人</string>
    <string name="person_address_fix">修改</string>
    <string name="person_address_city_title">选择城市</string>
    <string name="person_address_city_current">当前选择城市：%1$s</string>
    <string name="person_address_select_province">请选择省/市</string>
    <string name="person_address_user">收货人：%1$s</string>
    <string name="person_address_address">收货地址：%1$s</string>
    <string name="product_sell_integral">%1$s积分</string>
    <string name="product_sell_price">+%1$s元</string>
    <string name="product_sell_price1">元</string>
    <string name="product_sell_price2">%1$s元</string>
    <string name="store_company">企业店铺</string>
    <string name="store_business">商家店铺</string>
    <string name="store_personal">个人店铺</string>
    <string name="store_entity">实体店铺</string>
    <string name="store_apply">申请店铺</string>
    <string name="store_protocal">开店协议</string>
    <string name="store_name">店铺名称</string>
    <string name="store_category">店铺分类</string>
    <string name="store_user_idcard">法人身份证</string>
    <string name="store_contacts_idcard">联系人身份证</string>
    <string name="store_business_license">营业执照</string>
    <string name="store_organization_code">组织代码</string>
    <string name="store_account_permit">开户许可证</string>
    <string name="store_tax_registration">税务登记证</string>
    <string name="store_health_permit">卫生许可证</string>
    <string name="store_business_license_pic">上传营业执照正面清晰照片，复印件无效</string>
    <string name="store_good_integral">积分</string>
    <string name="charge_pay_by_wx">微信支付</string>
    <string name="charge_pay_by_zfb">支付宝支付</string>
    <string name="charge_pay">支付</string>
    <string name="lottery_inquiry_periods">期数</string>
    <string name="lottery_inquiry_time">抽奖时间</string>
    <string name="lottery_inquiry_result">是否中奖</string>
    <string name="open_way">开通方式</string>
</resources>