<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/login_username_text"
            android:textColor="@color/middle_gray"
            android:textSize="14sp" />

        <cn.antke.ezy.widget.ClearEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/login_input_username_hint"
            android:imeOptions="actionNext"
            android:maxLength="11"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:singleLine="true"
            android:textColor="@color/middle_gray"
            android:textColorHint="@color/edit_introduce_color"
            android:textSize="14sp" />
    </LinearLayout>

    <View style="@style/person_split_margin_left_right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/login_password_text"
            android:textColor="@color/middle_gray"
            android:textSize="14sp" />

        <cn.antke.ezy.widget.ClearEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/login_input_password_hint"
            android:inputType="textPassword"
            android:maxLength="12"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:textColor="@color/middle_gray"
            android:textColorHint="@color/edit_introduce_color"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="12dp"
        android:text="@string/login_forget_password"
        android:textColor="@color/text_introduce_color" />

    <TextView
        android:id="@+id/login_service_protocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/register_service_protocal_normal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/register_service_protocal"
        android:textColor="@color/text_introduce_color" />

    <TextView
        android:id="@+id/login_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_button"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="@color/white" />
</LinearLayout>