<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:id="@+id/ll_recharge_mode"
			android:layout_width="match_parent"
			android:layout_height="44dp"
			android:background="@color/white"
			android:gravity="center_vertical"
			android:paddingEnd="12dp"
			android:paddingStart="12dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/open_way"/>

			<TextView
				android:id="@+id/tv_recharge_way"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:drawableEnd="@drawable/list_more"
				android:drawablePadding="6dp"
				android:gravity="end"/>
		</LinearLayout>

		<View style="@style/person_split_match"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="44dp"
			android:background="@color/white"
			android:gravity="center_vertical"
			android:paddingEnd="12dp"
			android:paddingStart="12dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/amount_of_money"/>

			<TextView
				android:id="@+id/tv_recharge_price"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="end"/>
		</LinearLayout>

		<Space
			android:layout_width="match_parent"
			android:layout_height="10dp"/>

		<TextView
			android:id="@+id/tv_recharge_wxpay"
			android:background="@color/white"
			android:paddingEnd="12dp"
			android:paddingStart="12dp"
			style="@style/RadioBtn"
			android:text="@string/charge_pay_by_wx"/>

		<View style="@style/person_split_match"/>

		<TextView
			android:id="@+id/tv_recharge_alipay"
			android:background="@color/white"
			android:paddingEnd="12dp"
			android:paddingStart="12dp"
			style="@style/RadioBtn"
			android:text="@string/charge_pay_by_zfb"/>
	</LinearLayout>

	<TextView
		android:id="@+id/tv_recharge_pay"
		android:layout_width="match_parent"
		android:layout_height="44dp"
		android:layout_gravity="bottom"
		android:gravity="center"
		android:background="@color/primary_color"
		android:text="@string/charge_pay"
		android:textSize="16sp"
		android:textColor="@color/white"/>
</FrameLayout>